Partial 1.18.1 port of this branch
More will follow eventualy..